--- a/app/src/main/res/layout/activity_address_book.xml
+++ b/app/src/main/res/layout/activity_address_book.xml
@@ -15,6 +15,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Add new address"
+        android:background="@drawable/gradient_button"
+        android:textColor="@color/whiteColor"
+        android:fontFamily="@font/comfortaa_bold"
         app:layout_constraintTop_toTopOf="parent"
         android:layout_marginTop="15dp"
         android:layout_marginBottom="10dp"/>
