--- a/app/src/main/res/layout/activity_cart.xml
+++ b/app/src/main/res/layout/activity_cart.xml
@@ -19,12 +19,17 @@
 
             <Button
                 android:id="@+id/clearCartB"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                app:layout_constraintStart_toStartOf="parent"
+                android:layout_width="200dp"
+                android:layout_height="35dp"
+                android:layout_marginTop="8dp"
+                android:background="@drawable/gradient_button"
+                android:fontFamily="@font/comfortaa_bold"
+                android:text="Clear Cart"
+                android:textColor="@color/whiteColor"
+                android:textColorHighlight="@color/whiteColor"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                android:text="Clear Cart"/>
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
             <LinearLayout
                 android:id="@+id/cartShopDetailsLL"
@@ -36,12 +41,13 @@
                 app:layout_constraintTop_toBottomOf="@id/clearCartB"
                 android:paddingStart="5dp"
                 android:paddingLeft="5dp">
+
                 <TextView
                     android:id="@+id/cartShopNameTV"
                     android:layout_width="wrap_content"
                     android:layout_height="0dp"
-                    android:layout_weight="0.6"
                     android:layout_gravity="start"
+                    android:layout_weight="0.6"
                     android:textSize="20sp" />
                 <TextView
                     android:id="@+id/cartShopAddressTV"
@@ -72,8 +78,11 @@
                         android:text="DELIVERY ADDRESS"/>
                     <Button
                         android:id="@+id/cartAddrChangeB"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                        android:layout_width="150dp"
+                        android:layout_height="35dp"
+                        android:background="@drawable/gradient_button"
+                        android:textColor="@color/whiteColor"
+                        android:paddingHorizontal="10dp"
                         android:text="CHANGE/ADD"/>
                 </LinearLayout>
                 <LinearLayout
@@ -85,6 +94,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="0dp"
                         android:layout_weight="0.25"
+
                         android:layout_gravity="end"
                         android:text="48, 6th floor, E2"/>
                     <TextView
@@ -137,6 +147,33 @@
                 android:text="Cart is Empty!"
                 android:visibility="gone"/>
 
+            <LinearLayout
+                android:id="@+id/CartIsEmptyMsgLL"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                android:visibility="gone">
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/cartempty"
+                    android:layout_gravity="center_horizontal"
+                    />
+
+                <Button
+                    android:layout_width="200dp"
+                    android:layout_height="40dp"
+                    android:layout_gravity="center"
+                    android:text="Back to home"
+                    android:background="@drawable/gradient_button"
+                    android:textColor="@color/whiteColor"
+                    android:fontFamily="@font/comfortaa_bold"
+                    android:textStyle="bold"/>
+
+            </LinearLayout>
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/cartStoreProductRV"
                 android:layout_width="match_parent"
@@ -154,13 +191,17 @@
                 <TextView
                     android:layout_width="0dp"
                     android:layout_weight="0.3"
+                    android:textColor="@color/blackColor"
+                    android:fontFamily="@font/comfortaa_bold"
                     android:layout_height="wrap_content"
+                    android:layout_marginLeft="10dp"
                     android:text="Total"/>
                 <TextView
                     android:id="@+id/cartTotalTV"
                     android:layout_width="0dp"
                     android:layout_weight="0.7"
                     android:layout_height="wrap_content"
+                    android:layout_marginRight="15dp"
                     android:gravity="right"
                     android:textColor="@color/colorBodyText" />
             </LinearLayout>
@@ -175,21 +216,26 @@
                 <TextView
                     android:layout_width="0dp"
                     android:layout_weight="0.3"
+                    android:layout_marginLeft="10dp"
                     android:layout_height="wrap_content"
+                    android:textColor="@color/blackColor"
+                    android:fontFamily="@font/comfortaa_bold"
                     android:text="Delivery charges"/>
                 <TextView
                     android:id="@+id/cartDeliveryChargesTV"
                     android:layout_width="0dp"
                     android:layout_weight="0.7"
+                    android:layout_marginRight="15dp"
                     android:layout_height="wrap_content"
                     android:gravity="right"
                     android:textColor="@color/colorBodyText" />
             </LinearLayout>
 
             <TextView
+                android:id="@+id/textView"
                 android:layout_width="match_parent"
                 android:layout_height="75dp"
-                app:layout_constraintTop_toBottomOf="@+id/cartDeliveryChargesLL"/>
+                app:layout_constraintTop_toBottomOf="@+id/cartDeliveryChargesLL" />
 
         </android.support.constraint.ConstraintLayout>
 
@@ -200,13 +246,14 @@
         android:layout_width="match_parent"
         android:layout_height="65sp"
         android:clipToPadding="true"
-        android:background="@color/colorActionBarBackground"
+        android:background="@color/colorPrimaryDark"
         app:layout_behavior="android.support.design.widget.BottomSheetBehavior"
         android:visibility="visible">
         
         <android.support.constraint.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:padding="5dp">
             <LinearLayout
                 android:id="@+id/cartSummary_CartLL"
                 android:layout_width="wrap_content"
@@ -215,7 +262,7 @@
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintVertical_bias="0.5"
-                android:layout_marginLeft="10dp"
+                android:layout_marginLeft="15dp"
                 android:layout_marginStart="10dp"
                 android:orientation="vertical">
                 <TextView
@@ -237,9 +284,12 @@
 
             <Button
                 android:id="@+id/cartCheckout_CartB"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
+                android:layout_width="150dp"
+                android:layout_height="35dp"
                 android:text="Checkout"
+                android:fontFamily="@font/comfortaa_bold"
+                android:background="@color/whiteColor"
+                android:textColor="@color/blackColor"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.90"
                 app:layout_constraintStart_toEndOf="@id/cartSummary_CartLL"
