--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,27 +7,64 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:openDrawer="start"
     tools:context="e.a.exlorista_customer.MainActivity">
 
-    <android.support.design.widget.CoordinatorLayout
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:fitsSystemWindows="true">
+        android:layout_height="match_parent">
 
-        <LinearLayout
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            xmlns:app="http://schemas.android.com/apk/res-auto"
+            android:background="@drawable/appbardesign"
+            android:fitsSystemWindows="true">
+
+        </android.support.v7.widget.Toolbar>
+
+        <android.support.constraint.ConstraintLayout
+            android:id="@+id/top_header"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            >
+
+
+            <TextView
+                android:id="@+id/textView3"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:fontFamily="@font/comfortaa_bold"
+                android:text="Explorista"
+                android:textColor="@color/whiteColor"
+                android:textSize="18sp"
+                android:textStyle="bold"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <ImageView
+                android:id="@+id/imageView3"
+                android:layout_width="75px"
+                android:layout_height="75px"
+                android:layout_marginTop="8dp"
+                android:layout_marginEnd="24dp"
+                android:layout_marginRight="24dp"
+                app:layout_constraintBottom_toBottomOf="@+id/textView3"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="@+id/textView3"
+                app:srcCompat="@drawable/shopping_cart"
+                tools:ignore="VectorDrawableCompat" />
+
+        </android.support.constraint.ConstraintLayout>
+
+
+        <android.support.design.widget.CoordinatorLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical">
-
-            <android.support.v7.widget.Toolbar
-                android:id="@+id/toolbar"
-                android:layout_width="match_parent"
-                android:layout_height="?attr/actionBarSize"
-                android:background="@color/colorActionBarBackground"
-                android:elevation="4dp"
-                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
+            android:fitsSystemWindows="true"
+            android:layout_below="@+id/toolbar">
 
             <android.support.v4.widget.NestedScrollView
                 android:layout_width="match_parent"
@@ -40,7 +77,9 @@
                     <android.support.v4.view.ViewPager
                         android:id="@+id/imgSliderVP"
                         android:layout_width="match_parent"
-                        android:layout_height="200dp"
+                        android:layout_height="150dp"
+                        android:padding="5dp"
+                        android:layout_marginTop="10dp"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent" />
@@ -51,7 +90,9 @@
                         android:layout_height="wrap_content"
                         android:layout_marginTop="10dp"
                         android:text="Nearby Stores"
-                        android:textSize="20sp"
+                        android:textColor="@color/blackColor"
+                        android:fontFamily="@font/comfortaa_bold"
+                        android:textSize="18sp"
                         android:textStyle="bold"
                         app:layout_constraintTop_toBottomOf="@+id/imgSliderVP"
                         app:layout_constraintStart_toStartOf="parent"
@@ -62,9 +103,7 @@
                         android:id="@+id/storeRV"
                         android:layout_width="match_parent"
                         android:layout_height="0dp"
-                        android:layout_marginTop="10dp"
-                        android:layout_marginStart="10dp"
-                        android:layout_marginLeft="10dp"
+                        android:layout_marginTop="20dp"
                         app:layout_constraintTop_toBottomOf="@+id/nearByStoresTV" />
 
                     <TextView
@@ -77,51 +116,59 @@
 
             </android.support.v4.widget.NestedScrollView>
 
-        </LinearLayout>
-
-        <android.support.v4.widget.NestedScrollView
-            android:id="@+id/cartSummary_MainActivityNSV"
-            android:layout_width="match_parent"
-            android:layout_height="65dp"
-            android:clipToPadding="true"
-            android:background="@color/colorActionBarBackground"
-            app:layout_behavior="android.support.design.widget.BottomSheetBehavior">
-
-            <LinearLayout
-                android:id="@+id/cartSummary_MainActivityLL"
-                android:orientation="horizontal"
+            <android.support.v4.widget.NestedScrollView
+                android:id="@+id/cartSummary_MainActivityNSV"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginStart="10dp"
-                android:layout_marginLeft="10dp">
-                <TextView
-                    android:id="@+id/cartItemCount_MainActivityTV"
-                    android:layout_height="match_parent"
-                    android:layout_width="0dp"
-                    android:layout_weight="0.4"
-                    android:textColor="@color/colorActionBarTitleText"
-                    android:textStyle="bold"
-                    android:textSize="20sp"
-                    android:layout_gravity="center_vertical"
-                    android:text="1 item"/>
-                <Button
-                    android:id="@+id/proceedToCart_MainActivityB"
-                    android:layout_height="match_parent"
-                    android:layout_width="0dp"
-                    android:layout_weight="0.6"
-                    android:text="Proceed to cart"/>
-            </LinearLayout>
+                android:layout_height="65dp"
+                android:clipToPadding="true"
+                android:background="@color/colorPrimary"
+                app:layout_behavior="android.support.design.widget.BottomSheetBehavior">
 
-        </android.support.v4.widget.NestedScrollView>
+                <LinearLayout
+                    android:id="@+id/cartSummary_MainActivityLL"
+                    android:orientation="horizontal"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:padding="10dp"
+                    android:layout_marginStart="10dp"
+                    android:layout_marginLeft="10dp">
+                    <TextView
+                        android:id="@+id/cartItemCount_MainActivityTV"
+                        android:layout_height="match_parent"
+                        android:layout_width="0dp"
+                        android:layout_weight="0.4"
+                        android:textColor="@color/whiteColor"
+                        android:textStyle="bold"
+                        android:textSize="20sp"
+                        android:layout_gravity="center_vertical"
+                        android:text="1 item"/>
+                    <Button
+                        android:id="@+id/proceedToCart_MainActivityB"
+                        android:layout_height="35dp"
+                        android:layout_width="200dp"
+                        android:layout_marginRight="2dp"
+                        android:fontFamily="@font/comfortaa_bold"
+                        android:background="@color/whiteColor"
+                        android:drawableRight="@drawable/cart_arrow"
+                        android:text="Proceed to cart"/>
+                </LinearLayout>
 
-    </android.support.design.widget.CoordinatorLayout>
+            </android.support.v4.widget.NestedScrollView>
+
+        </android.support.design.widget.CoordinatorLayout>
+
+
+
+    </RelativeLayout>
 
     <android.support.design.widget.NavigationView
         android:id="@+id/nav_view"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_gravity="start"
+        app:menu="@menu/drawer_menu"
+        app:itemTextColor="@color/blackColor"
         app:headerLayout="@layout/nav_header"
-        app:menu="@menu/drawer_menu" />
+        />
 
 </android.support.v4.widget.DrawerLayout>
