--- a/app/src/main/res/layout/activity_store.xml
+++ b/app/src/main/res/layout/activity_store.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-<android.support.design.widget.CoordinatorLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -9,10 +8,32 @@
     android:fitsSystemWindows="true"
     tools:context="e.a.exlorista_customer.store">
 
+
+    <RelativeLayout
+        android:id="@+id/storeImgStorePageIVRL"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        >
+
+        <ImageView
+            android:id="@+id/storeImgStorePageIV"
+            android:layout_width="match_parent"
+            android:layout_height="150dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            />
+
+    </RelativeLayout>
+
+    <android.support.design.widget.CoordinatorLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:fitsSystemWindows="true"
+        android:layout_below="@+id/storeImgStorePageIVRL"
+        >
+
     <android.support.v4.widget.NestedScrollView
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
         android:id="@+id/storePage"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -23,28 +44,18 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
-            <ImageView
-                android:id="@+id/storeImgStorePageIV"
-                android:layout_width="match_parent"
-                android:layout_height="150dp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                android:layout_marginTop="10dp"
-                android:layout_marginLeft="10dp"
-                android:layout_marginStart="10dp"
-                android:layout_marginRight="10dp"
-                android:layout_marginEnd="10dp"/>
-
             <TextView
                 android:id="@+id/storeNameStorePageTV"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textSize="20sp"
                 android:textStyle="bold"
+                android:textColor="@color/blackColor"
+                android:layout_marginTop="10dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/storeImgStorePageIV" />
+                app:layout_constraintTop_toTopOf="parent"
+                />
 
             <LinearLayout
                 android:id="@+id/storeAddressAndTimingStorePageTV"
@@ -53,6 +64,7 @@
                 android:orientation="horizontal"
                 app:layout_constraintTop_toBottomOf="@+id/storeNameStorePageTV"
                 android:layout_marginLeft="10dp"
+                android:layout_marginTop="5dp"
                 android:layout_marginStart="10dp"
                 android:layout_marginRight="10dp"
                 android:layout_marginEnd="10dp" >
@@ -60,12 +72,15 @@
                     android:id="@+id/storeAddressStorePageTV"
                     android:layout_width="0dp"
                     android:layout_weight="0.35"
+                    android:layout_marginTop="5dp"
+                    android:textColor="@color/blackColor"
                     android:layout_height="wrap_content"
                     android:gravity="start"/>
                 <LinearLayout
                     android:id="@+id/storeTimingStorePageLL"
                     android:orientation="vertical"
                     android:layout_width="0dp"
+                    android:layout_marginTop="5dp"
                     android:layout_weight="0.65"
                     android:layout_height="wrap_content"
                     android:gravity="end">
@@ -79,6 +94,7 @@
                             android:layout_weight="0.9"
                             android:layout_height="wrap_content"
                             android:layout_marginBottom="5dp"
+                            android:textColor="@color/blackColor"
                             android:text="View store timings"/>
                         <ImageView
                             android:id="@+id/storeTimingViewIV"
@@ -92,45 +108,53 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="5dp"
+                        android:textColor="@color/blackColor"
                         android:visibility="gone"/>
                     <TextView
                         android:id="@+id/storeTimingTueStorePageTV"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="5dp"
+                        android:textColor="@color/blackColor"
                         android:visibility="gone"/>
                     <TextView
                         android:id="@+id/storeTimingWedStorePageTV"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="5dp"
+                        android:textColor="@color/blackColor"
                         android:visibility="gone"/>
                     <TextView
                         android:id="@+id/storeTimingThuStorePageTV"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="5dp"
+                        android:textColor="@color/blackColor"
                         android:visibility="gone"/>
                     <TextView
                         android:id="@+id/storeTimingFriStorePageTV"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="5dp"
+                        android:textColor="@color/blackColor"
                         android:visibility="gone"/>
                     <TextView
                         android:id="@+id/storeTimingSatStorePageTV"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="5dp"
+                        android:textColor="@color/blackColor"
                         android:visibility="gone"/>
                     <TextView
                         android:id="@+id/storeTimingSunStorePageTV"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="5dp"
+                        android:textColor="@color/blackColor"
                         android:visibility="gone"/>
                 </LinearLayout>
             </LinearLayout>
+
 
             <android.support.constraint.ConstraintLayout
                 android:id="@+id/storeProductDetailsCL"
@@ -138,26 +162,31 @@
                 android:layout_height="wrap_content"
                 app:layout_constraintTop_toBottomOf="@+id/storeAddressAndTimingStorePageTV"
                 android:layout_marginTop="10dp">
+
                 <android.support.v7.widget.RecyclerView
                     android:id="@+id/storeProductCategoryRV"
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintEnd_toEndOf="parent" />
+
                 <TextView
                     android:id="@+id/storeProductCategoryAndSubcategoryTV"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     app:layout_constraintTop_toBottomOf="@id/storeProductCategoryRV"
                     android:text="all"
+                    android:layout_marginTop="10dp"
                     android:textAllCaps="true"
                     android:background="@drawable/top_bottom_border"
                     android:textColor="@color/colorBodyText"
                     android:gravity="center"/>
+
                 <android.support.v7.widget.RecyclerView
                     android:id="@+id/storeProductAndSubcategoryRV"
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
+                    android:layout_marginTop="10dp"
                     app:layout_constraintTop_toBottomOf="@id/storeProductCategoryAndSubcategoryTV" />
             </android.support.constraint.ConstraintLayout>
 
@@ -170,40 +199,50 @@
 
     </android.support.v4.widget.NestedScrollView>
 
-    <android.support.v4.widget.NestedScrollView
-        android:id="@+id/cartSummary_StoreNSV"
-        android:layout_width="match_parent"
-        android:layout_height="65sp"
-        android:clipToPadding="true"
-        android:background="@color/colorActionBarBackground"
-        app:layout_behavior="android.support.design.widget.BottomSheetBehavior"
-        android:visibility="gone">
-
-        <LinearLayout
-            android:id="@+id/cartSummary_StoreLL"
+        <android.support.v4.widget.NestedScrollView
+            android:id="@+id/cartSummary_StoreNSV"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="horizontal"
-            android:layout_marginStart="10dp"
-            android:layout_marginLeft="10dp">
-            <TextView
-                android:id="@+id/cartItemCount_StoreTV"
-                android:layout_height="match_parent"
-                android:layout_width="0dp"
-                android:layout_weight="0.4"
-                android:textColor="@color/colorActionBarTitleText"
-                android:textStyle="bold"
-                android:textSize="20sp"
-                android:gravity="center_vertical"
-                android:text="1 item"/>
-            <Button
-                android:id="@+id/proceedToCartB"
-                android:layout_height="match_parent"
-                android:layout_width="0dp"
-                android:layout_weight="0.6"
-                android:text="Proceed to cart" />
-        </LinearLayout>
+            android:layout_height="65sp"
+            android:clipToPadding="true"
+            android:background="@color/colorPrimaryDark"
+            app:layout_behavior="android.support.design.widget.BottomSheetBehavior"
+            android:visibility="gone">
 
-    </android.support.v4.widget.NestedScrollView>
+            <LinearLayout
+                android:id="@+id/cartSummary_StoreLL"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="horizontal"
+                android:padding="10dp"
+                android:layout_marginStart="10dp"
+                android:layout_marginLeft="10dp">
+                <TextView
+                    android:id="@+id/cartItemCount_StoreTV"
+                    android:layout_height="match_parent"
+                    android:layout_width="0dp"
+                    android:layout_weight="0.4"
+                    android:textColor="@color/colorActionBarTitleText"
+                    android:textStyle="bold"
+                    android:textSize="20sp"
+                    android:gravity="center_vertical"
+                    android:text="1 item"/>
+                <Button
+                    android:id="@+id/proceedToCartB"
+                    android:layout_height="35dp"
+                    android:layout_width="200dp"
+                    android:background="@color/whiteColor"
+                    android:textColor="@color/blackColor"
+                    android:text="Proceed to cart"
+                    android:fontFamily="@font/comfortaa_bold"
+                    android:drawableRight="@drawable/cart_arrow"
+                    android:layout_marginRight="2dp"
+                    />
+            </LinearLayout>
 
-</android.support.design.widget.CoordinatorLayout>
+        </android.support.v4.widget.NestedScrollView>
+
+
+    </android.support.design.widget.CoordinatorLayout>
+
+
+</RelativeLayout>
