--- a/app/src/main/res/layout/storedetails.xml
+++ b/app/src/main/res/layout/storedetails.xml
@@ -1,43 +1,69 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginBottom="10sp"
-    android:id="@+id/storeDetailsCL"
+    android:background="@color/whiteColor"
+    app:cardElevation="1dp"
+    android:layout_marginVertical="5dp"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <ImageView
-        android:id="@+id/storeImgIV"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:padding="4sp" />
 
-    <TextView
-        android:id="@+id/storeNameTV"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="17sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/storeImgIV"
-        android:layout_marginTop="10dp"/>
+        <android.support.constraint.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/storeDetailsCL">
 
-    <TextView
-        android:id="@+id/storeAddressTV"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/storeImgIV"
-        app:layout_constraintTop_toBottomOf="@+id/storeNameTV"
-        android:layout_marginTop="10dp"/>
+            <ImageView
+                android:id="@+id/storeImgIV"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:layout_marginStart="5dp"
+                android:layout_marginLeft="5dp"
+                android:padding="4sp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
-    <TextView
-        android:id="@+id/storeTimingTV"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/storeImgIV"
-        app:layout_constraintTop_toBottomOf="@+id/storeAddressTV"
-        android:layout_marginTop="30dp"/>
+            <TextView
+                android:id="@+id/storeNameTV"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:fontFamily="@font/comfortaa_bold"
+                android:textColor="@color/blackColor"
+                android:textSize="15sp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/storeImgIV"
+                app:layout_constraintTop_toTopOf="parent" />
 
-</android.support.constraint.ConstraintLayout>
+            <TextView
+                android:id="@+id/storeAddressTV"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
+                android:fontFamily="@font/comfortaa_bold"
+                android:textColor="@color/fadeBlack"
+                android:textSize="15sp"
+                app:layout_constraintEnd_toEndOf="@+id/storeNameTV"
+                app:layout_constraintStart_toStartOf="@+id/storeNameTV"
+                app:layout_constraintTop_toBottomOf="@+id/storeNameTV" />
+
+            <TextView
+                android:id="@+id/storeTimingTV"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
+                android:layout_marginBottom="5dp"
+                android:fontFamily="@font/comfortaa_bold"
+                android:textColor="@color/fadeBlack"
+                android:textSize="15sp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="@+id/storeAddressTV"
+                app:layout_constraintStart_toStartOf="@+id/storeAddressTV"
+                app:layout_constraintTop_toBottomOf="@+id/storeAddressTV" />
+
+        </android.support.constraint.ConstraintLayout>
+
+    </android.support.v7.widget.CardView>
+
