--- a/app/src/main/res/layout/storeproductsandsubcategories.xml
+++ b/app/src/main/res/layout/storeproductsandsubcategories.xml
@@ -9,6 +9,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintStart_toStartOf="parent"
+        android:textColor="@color/blackColor"
+        android:fontFamily="@font/comfortaa_bold"
         android:paddingStart="10dp"
         android:paddingLeft="10dp"
         android:paddingEnd="0dp"
