--- a/app/src/main/res/drawable/border_store_page.xml
+++ b/app/src/main/res/drawable/border_store_page.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <corners
-        android:radius="20dp" />
-    <stroke
-        android:width="1dp"
-        android:color="@android:color/black" />
+    <gradient android:startColor="@android:color/holo_blue_bright"
+        android:endColor="@android:color/holo_blue_bright"
+        android:angle="270" />
+    <corners android:radius="20dp" />
+    <stroke android:width="3px" android:color="#000000" />
 </shape>
