Add address activity (addAddress.java)
1) Implemented AsyncTask for sending address data to server.
2) Added input validation for all address fields.

(Implementation incomplete)

--- a/app/src/main/res/layout/activity_add_address.xml
+++ b/app/src/main/res/layout/activity_add_address.xml
@@ -114,6 +114,7 @@
                 android:layout_weight="0.5"
                 android:layout_height="40dp">
                 <TextView
+                    android:id="@+id/homeTagTextTV"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:gravity="center"
@@ -128,6 +129,7 @@
                 android:layout_weight="0.5"
                 android:layout_height="40dp">
                 <TextView
+                    android:id="@+id/officeTagTextTV"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:gravity="center"
