--- a/app/src/main/res/drawable/border_store_page.xml
+++ b/app/src/main/res/drawable/border_store_page.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <gradient android:startColor="@android:color/holo_blue_bright"
-        android:endColor="@android:color/holo_blue_bright"
+    <gradient android:startColor="@color/colorActionBarBackground"
+        android:endColor="@color/colorActionBarBackground"
         android:angle="270" />
     <corners android:radius="20dp" />
     <stroke android:width="3px" android:color="#000000" />
